# gundam

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog-1.8.x  Dockerfile  Doxyfile.dxy  LONG_TERM_SUPPORT.md  Makefile  Makefile.inc  README.md  docker-compose.yml  mkdocs.yml  setup.sh  update.sh  workDir
anaevents/src/: AnaEvent.hh  AnaSample.cc  AnaSample.hh  AnaTreeMC.cc  AnaTreeMC.hh  AnySample.cc  AnySample.hh  AnyTreeMC.cc  AnyTreeMC.hh  CMakeLists.txt  Makefile  anyTreeMC.cc  anyTreeMC.hh
fitparam/src/: AnaFitParameters.cc  AnaFitParameters.hh  CMakeLists.txt  DetParameters.cc  DetParameters.hh  FSIParameters.cc  FSIParameters.hh  FitParameters.cc  FitParameters.hh  FluxParameters.cc  FluxParameters.hh  FluxParameters_norm.cc  FluxParameters_norm.hh  Makefile  NuclFSIParameters.cc  NuclFSIParameters.hh  XsecParameters.cc  XsecParameters.hh
nd280Fit/src/: CMakeLists.txt  ND280Fitter.cc  ND280Fitter.hh
src/: CMakeLists.txt  Makefile  calcXsec.cc  ccqefit.cc  ccqefit_dat.cc  ccqefit_dphit.cc  fitBase.cc  ingridFit.cc  propError.C  propError.cc  propError_dat.C  propError_dphit.C  xsllhCalcXsec.cxx  xsllhDetCovGenerator.cxx  xsllhDetCovGenerator.h  xsllhDetVariations.cxx  xsllhFit.cxx  xsllhGenWeightsBinner.cxx  xsllhGenWeightsFormater.cc  xsllhGenWeightsFormater.cxx  xsllhGetDetParCov.cxx  xsllhND280UpFit.cxx  xsllhPlot.cxx  xsllhTreeConvert.cxx  xsllhXsecCov.cxx
src/Applications/: CMakeLists.txt  LinkDef.cpp  LinkDef.h  LinkDef.in.h
src/Applications/include/: gundamFitter.hxx  gundamFlatTreeConverter.h  xsllhDetCovGenerator.h
src/Applications/src/: Sandbox.cxx  gundamCalcXsec.cxx  gundamConfigCompare.cxx  gundamConfigUnfolder.cxx  gundamContinue  gundamFitCompare.cxx  gundamFitInfo.cxx  gundamFitPlot.cxx  gundamFitReader.cxx  gundamFitter.cxx  gundamFlatTreeConverter.cxx  gundamRoot.cxx  (+13 more)
src/CacheManager/: CMakeLists.txt
src/CrossSection/: CMakeLists.txt
src/DatasetManager/: CMakeLists.txt
src/DialDictionary/: CMakeLists.txt
src/DialDirectory/: CMakeLists.txt
src/ErrorPropagator/: CMakeLists.txt
src/FigureGenerator/: CMakeLists.txt
src/FitParameters/: ._CMakeLists.txt  CMakeLists.txt  FitParametersLinkDef.h
src/FitSamples/: CMakeLists.txt
src/Fitter/: CMakeLists.txt  GundamLinkDef.h
src/Parameters/: CMakeLists.txt
src/ParametersManager/: CMakeLists.txt  ParametersLibLinkDef.h
src/Propagator/: CMakeLists.txt  PropagatorLinkDef.h
src/PythonBinder/: CMakeLists.txt
src/PythonInterface/: CMakeLists.txt  README.md
src/Samples/: CMakeLists.txt
src/SamplesManager/: CMakeLists.txt
src/StatisticalInference/: CMakeLists.txt
src/Utils/: CMakeLists.txt  UtilsLinkDef.h
src/anaevents/: CMakeLists.txt
src/applications/: CMakeLists.txt  ccqefit.cc  fitBase.cc  propError.cc  xsllhCalcXsec.cxx  xsllhDetVariations.cxx  xsllhFit.cxx  xsllhGenWeightsFormater.cxx  xsllhND280UpFit.cxx  xsllhPlot.cxx  xsllhUnitTests.cxx
src/errprop/: CMakeLists.txt
src/fitparam/: CMakeLists.txt
src/fitsamples/: CMakeLists.txt
src/fitter/: CMakeLists.txt
src/nd280Fit/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/xsecfit/: CMakeLists.txt
tests/: CMakeLists.txt  EXPECTED_FAILURES  README-TESTS.md  gundam-tests.sh
tests/GTests/: README-GTests.md  cachedSumsTest.cpp  cachedSumsTest.cu  hemiArrayTest.cpp  hemiArrayTest.cu  hemiExecutionPolicyTest.cpp  hemiExecutionPolicyTest.cu  hemiExternals.cpp  hemiLaunch.cu  hemiPortableLaunchTest.cpp  hemiPortableLaunchTest.cu  unitTest_ApplyMonotonicCondition.cpp  unitTest_CalculateBicubicSpline.cpp  unitTest_CalculateBilinearInterpolation.cpp  unitTest_CalculateCompactSpline.cpp  unitTest_CalculateGeneralSpline.cpp  unitTest_CalculateGraph.cpp  unitTest_CalculateMonotonicSpline.cpp  unitTest_CalculateUniformSpline.cpp  unitTest_DialDefinitions.cpp  unitTest_DialUtils.cpp  unitTest_JointProbability.cpp
tests/extended-tests/: 200NormalizationMCMC-config.yaml  200NormalizationMCMCPhys-config.yaml  900NormalizationMCMCCheck.C  README-EXTENDED.md
tests/fast-tests/: .gdb_history  000StartConditions.sh  090ExpectedFailure.sh  100CheckBicubic.C  100CheckBilinear.C  100CheckCompactSpline.C  100CheckGeneralSpline.C  100CheckGraph.C  100CheckMakeMonotonicSpline.C  100CovarianceTree.C  100HorrifyingTree.C  100MultiParTree.C  100NormalizationTree.C  200CovarianceFit-CacheManager.sh  200CovarianceFit-catmull.sh  200CovarianceFit-catmull.yaml  200CovarianceFit-config.yaml  200CovarianceFit-graph.sh  200CovarianceFit-graph.yaml  200CovarianceFit.sh  200DecompositionFit-config.yaml  200DecompositionFit.sh  200HorrifyingCov-config.yaml  200KrigedAsimov-config.yaml  200KrigedAsimov.C  200KrigedAsimov.sh  200MultiParFit-bicubic.sh  200MultiParFit-bicubic.yaml  200MultiParFit-bilinear.sh  200MultiParFit-bilinear.yaml  200MultiParFitBicubic-binning.txt  200MultiParFitBicubic-config.yaml  200MultiParFitBicubic.sh  200MultiParFitBilinear-config.yaml  200MultiParFitBilinear.sh  200NormalizationAsimov-binning.txt  200NormalizationAsimov-config.yaml  200NormalizationAsimov.sh  200NormalizationFit-config.yaml  200NormalizationFit.sh  (+17 more)
tests/regular-tests/: 100CheckBicubic.C  100CheckBilinear.C  100CheckCompactSpline.C  100CheckGeneralSpline.C  100CheckGraph.C  100CheckMakeMonotonicSpline.C  100CheckMonotonicSpline.C  100CheckUniformSpline.C  100HorrifyingTree.C  200HorrifyingCov-config.yaml  200HorrifyingCov.sh  200HorrifyingFit-config.yaml  200HorrifyingFit.sh  200MultiParFitBilinear.sh  200NormalizationFit.sh  200NormalizationMCMCDefault-config.yaml  200NormalizationMCMCDefault.sh  200NormalizationMCMCFixed-config.yaml  200NormalizationMCMCFixed.sh  200NormalizationMCMCPhys-binning.txt  200NormalizationMCMCPhys-config.yaml  200NormalizationMCMCPhys.sh  900HorrifyingCovCheck.C  900NormalizationFitCheck.C  900NormalizationMCMCCheck.C  README-REGULAR.md
tests/slow-tests/: 200HorrifyingMCMC-config.yaml  200HorrifyingMCMC.sh  200HorrifyingMCMCCov-config.yaml  200HorrifyingMCMCCov.sh  200NormalizationMCMC-config.yaml  900HorrifyingMCMCCheck.C  900HorrifyingMCMCCovCheck.C  README-SLOW.md
(+1122 files in other folders)
